<resources>
    <string name="app_name">Android_xml</string>
    <string name="name">Dasha</string>
    <string name="main_start">start</string>
    <string name="home_calculator">calculator</string>
    <string name="home_weather">weather</string>
    <string name="home_list">list</string>

    <string name="calc_numeric_zero">0</string>
    <string name="calc_numeric_one">1</string>
    <string name="calc_numeric_two">2</string>
    <string name="calc_numeric_three">3</string>
    <string name="calc_numeric_four">4</string>
    <string name="calc_numeric_five">5</string>
    <string name="calc_numeric_six">6</string>
    <string name="calc_numeric_seven">7</string>
    <string name="calc_numeric_eight">8</string>
    <string name="calc_numeric_nine">9</string>
    <string name="calc_divide">/</string>
    <string name="calc_multiply">*</string>
    <string name="calc_minus">-</string>
    <string name="calc_c">C</string>
    <string name="calc_equals">=</string>
    <string name="calc_plus">+</string>

    <string name="car_image">car_image</string>
    <string name="toolbar_back">back</string>
    <string name="nav_main">Main</string>
    <string name="nav_home">Home</string>
    <string name="nav_calculator">Calculator</string>
    <string name="nav_ist">List</string>
    <string name="nav_weather">Weather</string>
</resources>